[package]
name = "timelock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"

[dependencies.streamflow-timelock]
git = "https://github.com/streamflow-finance/streamflow-timelock"
rev = "4f35b8132882711e19797f691cb13cd522a30ee1"
