[package]
name = "timelock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"

[dependencies.streamflow-timelock]
#path = "/Users/mac/git/streamflow-timelock"
git = "https://github.com/streamflow-finance/streamflow-timelock"
rev = "0a2bb314a4d373eaa5f3e4f01a9c1f6fb3e6f7a6"
features = ["anchor-support"]
